--- a/index-template.html
+++ b/index-template.html
@@ -17,12 +17,9 @@
 
     <script type="module">
 
-        import init, { initThreadPool , gen_wasm_book } from "./pkg/puzzle.js";
+        import init, { gen_wasm_book } from "./pkg/puzzle.js";
 
         init().then(async () => {
-            console.log(navigator.hardwareConcurrency + " cores found")
-
-        await initThreadPool(navigator.hardwareConcurrency);
         
 
         window.populate_book = (text) => {
