fixed onload styleing

--- a/index-template.html
+++ b/index-template.html
@@ -8,8 +8,12 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
     <link rel='stylesheet' type='text/css' href='main.css'>
+    <style>
+    /* CSS_HERE */
+    </style>
 </head>
 <body>
+
 
     <div id="content" class="content">
         CONTENT_GOES_HERE
