added isometric drawings

--- a/index-template.html
+++ b/index-template.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Puzzle Book</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
     <link rel='stylesheet' type='text/css' href='main.css'>
     <style>
